Avance en la funcionalidad de Creación de Proyectos